Added Entity Framework and Created Database

--- a/HotelListing.API/HotelListing.API/appsettings.json
+++ b/HotelListing.API/HotelListing.API/appsettings.json
@@ -1,5 +1,8 @@
 {
-  "Serilog":  {
+  "ConnectionStrings": {
+    "HotelListingDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=HotelListingAPIDb;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
+  "Serilog":{
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
