Added Identity and Token Authentication

--- a/HotelListing.API/HotelListing.API/appsettings.json
+++ b/HotelListing.API/HotelListing.API/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "HotelListingDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=HotelListingAPIDb;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
-  "Serilog":{
+  "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -26,5 +26,11 @@
       }
     ]
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Issuer": "HotelListingAPI",
+    "Audience": "HotelListingAPIClient",
+    "DurationInMinutes": 10,
+    "Key": "YourVeryStrongSecret4343243423434334"
+  }
 }
